[gd_scene load_steps=9 format=2]

[ext_resource path="res://SpaceElements/Characters/Allies/Viper/fire.png" type="Texture" id=1]
[ext_resource path="res://SpaceElements/Weapons/LaserBeam/LaserBeam.tscn" type="PackedScene" id=2]
[ext_resource path="res://SpaceElements/Characters/Allies/Enterprise/ShuttlePod/ShuttlePod.gd" type="Script" id=3]
[ext_resource path="res://SpaceElements/Characters/Allies/Enterprise/ShuttlePod/ShuttlePod.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 584.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.0705882, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0.0705882, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ShuttlePod" type="KinematicBody2D" groups=["ally", "hunter", "shuttlepod"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
nb_shoot = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 6 )

[node name="LaserBeam" parent="Sprite" instance=ExtResource( 2 )]
position = Vector2( 0, -500 )
rotation = -1.5708
scale = Vector2( 2, 2 )
damage_caused = 2

[node name="Fire" type="Node2D" parent="Sprite"]

[node name="Sprite" type="Sprite" parent="Sprite/Fire"]
position = Vector2( -66.6667, 566.664 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Fire"]
position = Vector2( 66.666, 566.664 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 50
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 2 )

[node name="TargetTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 3 )
anims/blink = SubResource( 4 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="TargetTimer" to="." method="_on_TargetTimer_timeout"]
